# shura

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  arch_android_setup.sh  build.rs  todo.md  todo.txt
assets/lighting/: light.wgsl  shadow.wgsl
docs/: .gitignore  package.json
docs/src/: index.md
examples/: Cargo.toml  README.md  build.rs
examples/3d/: main.rs
examples/arkanoid/: Cargo.toml  main.rs
examples/arkanoid/src/: game.rs  main.rs  menu.rs
examples/bunnymark/: Cargo.toml  android_key.keystore  main.rs  test.json
examples/bunnymark/src/: main.rs
examples/bunnymark_gui/: main.rs
examples/bunnymark_rayon/: main.rs
examples/bunnymark_text/: main.rs
examples/bunnymark_text_test/: main.rs
examples/examples/3d/: main.rs
examples/examples/bunnymark/: README.md  main.rs
examples/examples/bunnymark_text/: main.rs
examples/examples/flappy_bird/: main.rs
examples/examples/flappy_bird_ai/: main.rs
examples/examples/lighting/: main.rs
examples/examples/meshes/: main.rs
examples/examples/models/: main.rs
examples/examples/physics/: main.rs
examples/examples/physics_serde/: main.rs
examples/flappy_bird/: main.rs
examples/flappy_bird_ai/: README.md  main.rs
examples/gui/: Cargo.toml  main.rs
examples/gui/run-wasm/: Cargo.toml
examples/gui/src/: main.rs
examples/lighting/: light.glsl  light.wgsl  main.rs  present.glsl  shader.glsl  shadow.glsl
examples/lighting_old/: light.glsl  main.rs  present_map.glsl
examples/lighting_plugin/: main.rs  plugin.rs
examples/lighting_test/: main.rs
examples/lighting_test_2/: main.rs
examples/meshes/: main.rs
examples/models/: main.rs
examples/physics/: .gitignore  Cargo.toml  main.rs  test.ron
examples/physics/src/: main.rs
examples/physics_serde/: README.md  main.rs  old.rs
examples/postprocessing/src/: main.rs
examples/ray_tracer/: main.rs
examples/shura_template/: Cargo.toml  README.md  build.rs
examples/shura_template/run-wasm/: Cargo.toml
examples/shura_template/scripts/: arch_android_setup.sh
examples/shura_template/src/: lib.rs
examples/src/: lib.rs  main.rs
examples/testab/: main.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
res/cube/: cube.mtl
res/shader/: blurr.wgsl  color.wgsl  color_uniform.wgsl  colored_sprite.glsl  colored_sprite.wgsl  grey.wgsl  rainbow.wgsl  sprite.wgsl  sprite_sheet.wgsl  sprite_sheet_uniform.wgsl  text.wgsl  transparent.wgsl  transparent_sprite.wgsl  transparent_uniform.wgsl  vertex.glsl  vertex.wgsl  vertex_color.wgsl  vertex_crop.wgsl  vertex_crop_sheet.wgsl  vertex_no_instance.wgsl  vertex_text.wgsl
resources/lighting/: light.wgsl
shader/2d/: blurr.wgsl  sprite_sheet.wgsl
shader/3d/: model.wgsl  test3d.wgsl
shura_macros/: .gitignore  Cargo.toml  README.md
shura_macros/src/: lib.rs
shura_template/: Cargo.toml  README.md  build.rs
shura_template/android/resources/values/: theme.xml
shura_template/src/: main.rs
src/: app.rs  lib.rs  shura.rs  shura_core.rs
src/animation/: animation.rs  ease.rs  mod.rs  tween.rs
src/arena/: arena.rs  arena_serde.rs  mod.rs
src/assets/: assets.rs  mod.rs
src/audio/: audio_manager.rs  mod.rs  sound.rs
src/component/: base_component.rs  character_controller_component.rs  collider_component.rs  component.rs  component_config.rs  component_derive.rs  component_group.rs  component_handle.rs  component_manager.rs  component_set.rs  component_type.rs  controller_caller.rs  controller_manager.rs  empty_component.rs  empty_instance.rs  group.rs  kinematic_character_controller_component.rs  mod.rs  position_component.rs  position_instance.rs  rigid_body_component.rs  simple_character_controller_component.rs
src/context/: context.rs  mod.rs  render_context.rs
src/data/: arena.rs  arena_path.rs  arena_serde.rs  mod.rs
src/ecs/: collider_component.rs  entity.rs  entity_config.rs  entity_handle.rs  entity_manager.rs  entity_set.rs  entity_type.rs  group.rs  group_manager.rs  kinematic_character_controller_component.rs  mod.rs  position_component.rs  rigid_body_component.rs  simple_character_controller_component.rs  systems.rs  world.rs
src/entity/: entity.rs  entity_group_manager.rs  entity_handle.rs  entity_manager.rs  entity_type.rs  global_entities.rs  group_manager.rs  mod.rs
src/graphics/: assets.rs  camera.rs  color.rs  component_buffer.rs  compute_context.rs  depth_buffer.rs  frame_manager.rs  gpu.rs  instance_buffer.rs  mesh.rs  mod.rs  model.rs  render_config.rs  render_encoder.rs  render_group.rs  render_taget.rs  render_target.rs  renderer.rs  resources.rs  screen_config.rs  shader.rs  sprite.rs  sprite_array.rs  sprite_sheet.rs  uniform.rs  vertex.rs
src/gui/: gui.rs  mod.rs
src/input/: cursor_manager.rs  input.rs  mod.rs
src/io/: io.rs  mod.rs
src/log/: logging.rs  mod.rs
src/logging/: logging.rs
src/math/: aabb.rs  dimension.rs  math.rs  matrix.rs  mod.rs
src/physics/: mod.rs  physics.rs  world.rs  world_changes.rs
src/rand/: mod.rs
src/random/: mod.rs
src/resource/: mod.rs  resource.rs
src/scene/: context.rs  mod.rs  scene.rs  scene_controller.rs  scene_manager.rs  scene_serde.rs  state.rs
src/serde/: group_serde.rs  mod.rs  scene_serde.rs
src/sound/: audio_manager.rs  mod.rs  sound.rs
src/state/: global_state.rs  mod.rs  scene_state.rs  state.rs  state_manager.rs
src/system/: mod.rs  systems.rs
src/systems/: systems.rs
src/tasks/: mod.rs  task_manager.rs  tasks.rs
src/text/: font.rs  mod.rs  text.rs
src/time/: frame_manager.rs  mod.rs  time_manager.rs
src/tween/: ease.rs  mod.rs  tween.rs
src/world/: character_controller_component.rs  collider_component.rs  collider_instance.rs  mod.rs  physic_component.rs  rigid_body_component.rs  rigid_body_instance.rs  world.rs  world_changes.rs  (+1 more)
temp/postprocessing/: Cargo.toml
temp/template/: Cargo.toml
temp/template/src/: main.rs
template/: .gitignore  Cargo.toml  README.md  build.rs  data.binc
template/android/: deb_android_setup.sh
template/android/resources/values/: theme.xml
template/scripts/: deb_android_setup.sh
template/src/: main.rs
(+35 files in other folders)
