[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/AndriBaal/shura"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["graphics", "physics", "game", "android", "wasm"]
authors = ["Andri Baal <andri.baal@bluewin.ch>"]
categories = [
    "wasm",
    "rendering",
    "graphics",
    "game-engines",
    "game-development",
]

[workspace]
resolver = "2"
members = ["shura_macros"]
exclude = ["shura_template", "assets"]

[package]
name = "shura"
description = "A fast cross-plattform 2D game framework"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[workspace.dependencies.shura_macros]
path = "./shura_macros"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[features]
animation = []
framebuffer = []
gamepad = ["dep:gilrs"]
text = ["dep:rusttype", "dep:owned_ttf_parser"]
audio = ["dep:rodio"]
physics = ["dep:rapier2d"]
deterministic_physics = ["physics", "rapier2d/enhanced-determinism"]
gui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]
log = ["dep:log", "dep:env_logger"]
rayon = ["dep:rayon", "nalgebra/rayon", "image/rayon", "egui?/rayon"]
serde = [
    "dep:serde",
    "dep:bincode",
    "wgpu/serde",
    "wgpu/replay",
    "winit/serde",
    "rstar/serde",
    "nalgebra/serde-serialize",
    "parking_lot/serde",
    "dashmap/serde",
    "gilrs?/serde-serialize",
    "egui?/serde",
    "rapier2d?/serde-serialize",
]
default = [
    "animation",
    "gamepad",
    "text",
    "audio",
    "physics",
    "serde",
    # "gui",
    "log",
    "framebuffer",
    # "rayon",
]

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
egui_demo_lib = { git = "https://github.com/AndriBaal/egui.git" }

[dependencies]
async-trait = "0.1"
winit = { version = "0.30", features = ["mint"] }
wgpu = { version = "22.0", features = ["glsl", "spirv", "webgl"] }
anyhow = "1.0"
env_logger = { version = "0.11", optional = true }
tobj = { version = "4.0" }
rstar = "0.12"
delaunator = "1"
parking_lot = "0.12"
take_mut = "0.2"
crossbeam-channel = "0.5"
dashmap = "6.0"
rayon = { version = "1", optional = true }
mint = { version = "0.5" }
nalgebra = { version = "0.33", features = ["convert-bytemuck", "mint", "rand"] }
rusttype = { version = "0.9", optional = true }
owned_ttf_parser = { version = "0.15", optional = true }
gilrs = { version = "0.10", optional = true }
egui-wgpu = { git = "https://github.com/AndriBaal/egui.git", features = [
    "winit",
], optional = true }
egui = { git = "https://github.com/AndriBaal/egui.git", default-features = false, optional = true, features = [
    "bytemuck",
    "default_fonts",
    "mint",
] }
rapier2d = { version = "0.22", optional = true }
log = { version = "0.4", optional = true, features = ["std"] }
downcast-rs = "1.2.0"
rustc-hash = "2.0"
futures-intrusive = "0.5.0"
bytemuck = { version = "1.15", features = ["derive"] }
instant = "0.1.12"
shura_macros = { workspace = true }
image = { version = "0.25.1", default-features = false, features = [
    "default-formats",
] }
serde = { version = "1", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3.3", optional = true }
rand = "0.8.5"
rodio = { version = "0.19", default-features = false, optional = true, features = [
    "symphonia-all",
] }
egui-winit = { git = "https://github.com/AndriBaal/egui.git", features = [
    "links",
], default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.12"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "Clipboard",
    "Location",
] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
features = ["fragile-send-sync-non-atomic-wasm"]
version = "22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.rodio]
features = ["symphonia-all", "wasm-bindgen"]
version = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies.instant]
features = ["wasm-bindgen"]
version = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
features = ["arboard", "webbrowser"]
default-features = true
git = "https://github.com/AndriBaal/egui.git"

[target.'cfg(target_os = "android")'.dependencies.winit]
features = ["android-native-activity"]
version = "0.30"
