[package]
name = "shura_examples"
version = "0.4.0"
edition = "2021"

# Android
# Important: key.keystore is only for demo. Replace key.keystore for your own private key when deploying
# [lib]
# path = "./src/main.rs"
# crate_type=["cdylib"]


[dependencies]
shura = { path = "../" }

[dev-dependencies]
egui_demo_lib = "0.23"

[build-dependencies]
fs_extra = "1.2"

[package.metadata.android]
package = "com.shura.examples"
apk_name = "Shura Example"

[package.metadata.android.application]
label = "Shura Example"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.application.activity]
orientation = "landscape"

[package.metadata.android.signing.release]
path = "./key.keystore"
keystore_password = "android"
