[package]
name = "shura_proc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndriBaal/shura_proc"
documentation = "https://docs.rs/shura_proc"
description = "Derive macros for the shura component system"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
const-fnv1a-hash = "1.1"
quote = "1.0"
