[package]
name = "shura_template"
version = "0.1.0"
edition = "2021"

# Android run configuration (remove for faster compile time)
[lib]
path = "./src/main.rs"
crate_type=["cdylib"]

[target.'cfg(target_os = "android")']

[dependencies]
shura = { path = "../" }

[build-dependencies]
fs_extra = "1.2"

[package.metadata.android]
package = "com.shura.template"
apk_name = "Shura Example"
assets = "./res"
resources = "./android/resources"

[package.metadata.android.application]
label = "Shura Example"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
orientation = "landscape"

[package.metadata.android.signing.release]
path = "./android/key.keystore"
keystore_password = "android"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_INTERNAL_STORAGE"
max_sdk_version = 18
