[package]
name = "postprocessing"
version = "0.1.0"
edition = "2021"

# Only for android!!!
# [lib]
# crate-type = ["cdylib"]
# path = "src/main.rs"

[dependencies]
shura = { path = "./../..", default-features = false, features = ["text"]}
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = ["run-wasm"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

[package.metadata.android]
package = "com.shura.postprocessing"
apk_name = "Shura Postprocessing"

[package.metadata.android.application]
label = "Shura Postprocessing"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.application.activity]
orientation = "landscape"
resizeable_activity = true

[package.metadata.android.signing.release]
path = "./android_key.keystore"
keystore_password = "android"
